--- a/Unit03/css/index3.css
+++ b/Unit03/css/index3.css
@@ -19,6 +19,6 @@ div ~ p {
 #anhnen{
 	width: 500px;
 	height: 300px;
-	background-image: url(../../img/01/Samsung1.jpg);
+	background-image: url(../../img01/Samsung1.jpg);
 	background-repeat: repeat-x;
 }		
