--- a/BT04/bt4_1.css
+++ b/BT04/bt4_1.css
@@ -34,14 +34,14 @@ a {
 	left: 800px;
 }
 .menu {
-	width: 60px;
-	height: 50px;
+	width: 50px;
+	height: 20px;
 	text-align: center;
 	padding-top:15px;
 	float: left;
 }
 .menu:hover {
-	background-color: white;
+	background-color: blue;
 }
 .menu:hover a{
 	color: red;
@@ -59,7 +59,7 @@ a {
 	height: 35px;
 }
 .menubody:hover {
-	background-color: white;
+	background-color: blue;
 }
 .menubody:hover a{
 	color: red;
@@ -73,21 +73,26 @@ a {
 .main {
 	width: 200px;
 	height: 300px;
-	background-color: yellow;
-	border: 10px solid yellow;
+	background-color: transparent;
+	margin: 5px;
 	display: inline-block;
 	float: left;
-	/*border: 1px solid black;*/
+	border: 1px solid black;
+	border-radius: 20px;
 	position: relative;
 }
 .maintop {
-	width: 200px;
-	height: 80px;
-	/*background-color: green;*/
-	padding-top: 10px;
+	width: 194px;
+	height: 40px;
+	background-color: #F1EEEE;
+	border: 1px solid black;
+	border-top-left-radius: 20px;
+	border-top-right-radius: 20px;
+	padding-top: 5px;
 	padding-left: 5px;
 	position: absolute;
 	top: 0;
+	/*z-index: 30;*/
 }
 .maintop:hover {
 	background-color: white;
@@ -95,45 +100,38 @@ a {
 .maintop:hover a{
 	color: red;
 }
-#mainmid1, #mainmid2, #mainmid3, #mainmid4, #mainmid5, #mainmid6, #mainmid7 {
+.mainmid {
 	width: 200px;
-	height: 220px;
-	/*background-color: blue;*/
+	height: 260px;
+	background-color: transparent;
 	background-size: cover;
 	background-position: center;
 	position: absolute;
 	top: 40px;
 	z-index: 10;
 }
-#mainmid1 {
-	background-image: url(../img04/ip.jpg);
+img {
+	width: 100%;
+	height: 100%;
+	border-bottom: 1px solid black;
+	border-bottom-left-radius: 20px;
+	border-bottom-right-radius: 20px;
 }
-#mainmid2 {
-	background-image: url(../img04/travel.jpg);
-}
-#mainmid3 {
-	background-image: url(../img04/photo.jpg);
-}
-#mainmid4 {
-	background-image: url(../img04/finance.jpg);
-}
-#mainmid5 {
-	background-image: url(../img04/movie.jpg);
-}
-#mainmid6 {
-	background-image: url(../img04/cooking.jpg);
-}
-#mainmid7 {
-	background-image: url(../img04/fashion.jpg);
+img:hover {
+	width: 105%;
+	height: 110%;
 }
 .mainbot {
 	width: 200px;
-	height: 50px;
+	height: 40px;
 	color: white;
-	background-color: black;
+	background-color: transparent;
+	border-bottom: 1px solid transparent;
+	border-bottom-left-radius: 20px;
+	border-bottom-right-radius: 20px;
 	position: absolute;
 	z-index: 20;
-	top: 240px;
+	top: 260px;
 }
 #footer {
 	width: 100%;
