--- a/BT05/bt5.css
+++ b/BT05/bt5.css
@@ -44,9 +44,10 @@
 #quangcao ul {
 	padding-left: 70%;
 }
+/*Mainbar*/
 #mainbar {
 	width: 60%;
-	height: 5000px;
+	height: 3550px;
 	background-color: white;
 	margin-left: 10%;
 	display: inline-block;
@@ -166,23 +167,251 @@
 	display: inline-block;
 	float: left;
 }
-
 #main3b {
 	width: 50%;
 	height: 300px;
 	background-color: white;
 	display: inline-block;
 }
-
-
-
-
-
-#sidebar {
-	width: 20%;
-	height: 1000px;
+#main4 {
+	width: 100%;
+	height: 450px;
+	background-color: white;
+}
+#main4 ul li {
+	list-style: none;
+}
+#main4a {
+	width: 50%;
+	height: 360px;
+	background-color: white;
+	display: inline-block;
+	float: left;
+}
+#main4b {
+	width: 50%;
+	height: 360px;
+	background-color: white;
+	display: inline-block;
+}
+.img4 {
+	width: 40%;
+	height: 120px;
+	background-color: white;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	display: inline-block;
+	float: left;
+}
+.text4 {
+	width: 50%;
+	height: 120px;
+	background-color: white;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	margin-right: 10px;
+	display: inline-block;
+}
+.img4 img {
+	width: 100%;
+	height: 100%;
+	font-size: cover;
+}
+#main5 {
+	width: 100%;
+	height: 370px;
+	background-color: white;
+}
+#main5 ul li {
+	list-style: none;
+}
+#text5 {
+	width: 40%;
+	height: 300px;
+	background-color: white;
+	margin-right: 5%;
+	display: inline-block;
+	float: left;
+}
+#img5 {
+	width: 55%;
+	height: 300px;
 	background-color: yellow;
 	display: inline-block;
 }
-
-
+#img5 img {
+	width: 100%;
+	height: 100%;
+	font-size: cover;
+}
+.main678910 {
+	width: 100%;
+	height: 200px;
+	background-color: white;
+}
+.main678910 ul li {
+	list-style: none;
+}
+.img678910 {
+	width: 20%;
+	height: 150px;
+	background-color: pink;
+	margin-right: 5%;
+	display: inline-block;
+	float: left;
+}
+.img678910 img {
+	width: 100%;
+	height: 100%;
+	font-size: cover;
+}
+.text678910 {
+	width: 75%;
+	height: 150px;
+	background-color: white;
+	display: inline-block;
+}
+#main11 {
+	width: 100%;
+	height: 50px;
+	background-color: white;
+}
+#main12 {
+	width: 100%;
+	height: 300px;
+	background-color: white;
+}
+#main12 ul li {
+	list-style: none;
+}
+#main12a {
+	width: 45%;
+	height: 300px;
+	background-color: white;
+	margin-right: 5%;
+	display: inline-block;
+	float: left;
+}
+#main12a img {
+	width: 100%;
+	height: 150px;
+	font-size: cover;
+}
+#main12b {
+	width: 45%;
+	height: 300px;
+	background-color: white;
+	display: inline-block;
+}
+#main12b img {
+	width: 100%;
+	height: 150px;
+	font-size: cover;
+}
+/*Sidebar*/
+#sidebar {
+	width: 20%;
+	height: 3550px;
+	background-color: white;
+	display: inline-block;
+}
+#sidebar a {
+	text-decoration: none;
+	color: black;
+}
+#sidebar a:hover {
+	color: red;
+}
+#topsidebar {
+	width: 100%;
+	height: 2180px;
+	background-color: gray;
+}
+.topsidebarcontent {
+	width: 100%;
+	height: 190px;
+	background-color: gray;
+	margin-bottom: 20px;
+}
+.topsidebarcontent img {
+	width: 100%;
+	height: 120px;
+	font-size: cover;
+}
+#midsidebar {
+	width: 100%;
+	height: 800px;
+	background-color: white;
+}
+#docnhieunhat {
+	width: 100%;
+	height: 50px;
+	background-color: gray;
+}
+#midsidebar ul li {
+	height: 50px;
+	list-style: none;
+	background-color: white;
+}	
+#botsidebar {
+	width: 100%;
+	height: 500px;
+	background-color: gray;
+}
+#botsidebar li{
+	width: 40%;
+	height: 50px;
+	margin: 10px;
+	background-color: white;
+	list-style: none;
+	display: inline;
+	float: left;
+	border-bottom: 5px solid red;
+}
+#dichvu {
+	width: 90%;
+	height: 50px;
+	margin-left: 5%;
+	padding-top: 5px;
+	background-color: white;
+}
+#dichvu i {
+	font-size: 150%;
+}
+.blank {
+	clear: both;
+}
+/*Footer*/
+#footer {
+	width: 100%;
+	height: 250px;
+	background-color: gray;
+}
+#footer a {
+	text-decoration: none;
+	color: white;
+}
+#footer a:hover {
+	color: red;
+}
+#footer ul {
+	padding-left: 150px;
+	padding-top: 20px;
+}
+#footer ul li {
+	list-style: none;
+	color: white;
+}
+.menufootera {
+	width: 100px;
+	height: 50px;
+	border-right: 1px solid white;
+	display: inline;
+	float: left;
+}
+.menufooterb {
+	width: 150px;
+	height: 50px;
+	display: inline;
+	float: left;
+}
